EB-2008-11-02-0: Enhancem.:  Additional test for jsc scripts
                 Review:     MD

DG-2008-10-29-1: Bugfix:     Fixed commlib shutdown test.
                 Review:     CR

TB-2008-10-29-0: Bugfix:     Fixed Hedeby test 'usecase SI'
                 Cleanup:    o Hedeby test 'usecase SI':
                               - introduced "this" context
                               - additional logging output
                             o Hedeby util.tcl
                               - changed remove_resource_property() to optional
                                 named argument passing and adjusted usages
                 Review:     MG

DG-2008-10-29-0: Bugfix:     An expect timeout does not define $expect_out(0,string)
                             because nothing has matched. 
                 Review:     CR

GH-2008-10-29-0: Bugfix:     o Removed obsolete code from test; no need to
                               simulate the bug fix.
                 Belongs to: GH-2008-10-24-0
                 Review:     CR

CR-2008-10-28-0: Bugfix:     o Fixed NFS problem when deleting TS generated
                               script files.
                 Enhancem.:  o Enhanced testsuite execution performance by
                               removing double called identity check.
                 Review:     TB

MD-2008-10-28-0: Bugfix:     o issue 2754 test was no able to deal with license
                               agreement message and more command.
                 Review:     CR

GH-2008-10-27-0: Bugfix:     o Fixed race condition between queue status and
                               job status query in test: bugs/issuezilla/2714
                             o bind test queue to qmaster to avoid problems 
                               with local tmp files in test: bugs/issuezilla/2714
                 Belongs To: GH-2008-10-24-0
                 Review:     CR

RD-2008-10-27-0: Enhancem.:  - Added test for IZ 2762