@@ -1,3 +1,9 @@
+RH-2008-11-03-0: Enhancem.:  o Hedeby: test for issue 585 and 586 added
+                             o logging: New util method ts_log_heading added.
+                               This method can be used to log logical execution
+                               steps of a test.
+                 Review:     TB
+
 EB-2008-11-02-0: Enhancem.:  Additional test for jsc scripts
                  Review:     MD
 
